syntax="proto3";

option java_package="tech.gelab.cardiograph.storage.pb";
option java_multiple_files = true;

message AuthorizationSettings {
  string token = 1;
  bool authentication_complete = 2;
}